# tdd-cc

./: .gitignore  README.md  STAGES.md  pyproject.toml
src/task_manager/: __init__.py  cli.py  models.py  operations.py  storage.py
tests/: __init__.py  test_cli.py  test_integration.py  test_models.py  test_operations.py  test_storage.py
